feat: add CRUD for book
